--- a/cssgossip/css/style.css
+++ b/cssgossip/css/style.css
@@ -11,7 +11,7 @@ body {
 }
 
 h1 {
-    font-family: 'alexbrush';
+    font-family: 'alexbrush', "Times New Roman", serif;
     font-size: 2em;
 }
 
