--- a/spazarcade/css/styles.css
+++ b/spazarcade/css/styles.css
@@ -234,19 +234,6 @@ textarea {
     resize: vertical;
 }
 
-input[type=submit] {
-    background-color: #3368dc;
-    color: white;
-    padding: 12px 20px;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-}
-
-input[type=submit]:hover {
-    background-color: #3478df;
-}
-
 .small-shadow {
     text-shadow: 1px 1px #2b0f54;
 }
@@ -255,6 +242,18 @@ input[type=submit]:hover {
     border-radius: 4px;
 }
 
+.contact-btn {
+    background-color: #3368dc;
+    color: white;
+    padding: 12px 20px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+}
+
+.contact-btn:hover {
+    background-color: #3478df;
+}
 
 /*********** Toast ***********/
 .no-toast {
